WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
165333
REGRESSION (
r208802
): TouchBar pause button doesn't work
https://bugs.webkit.org/show_bug.cgi?id=165333
Summary
REGRESSION (r208802): TouchBar pause button doesn't work
Beth Dakin
Reported
2016-12-02 13:55:39 PST
REGRESSION (
r208802
): TouchBar pause button doesn't work
rdar://problem/29487187
Attachments
Patch
(2.24 KB, patch)
2016-12-02 13:58 PST
,
Beth Dakin
wenson_hsieh
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2016-12-02 13:58:12 PST
Created
attachment 295996
[details]
Patch
Wenson Hsieh
Comment 2
2016-12-02 13:59:28 PST
Comment on
attachment 295996
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=295996&action=review
> Source/WebCore/ChangeLog:11 > + used, so this patch just removes it.
Nit - newline after the description
Beth Dakin
Comment 3
2016-12-02 14:01:55 PST
Thanks Wenson!
https://trac.webkit.org/changeset/209264
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug