REGRESSION (r208802): TouchBar pause button doesn't work https://bugs.webkit.org/show_bug.cgi?id=165333 -and corresponding- rdar://problem/29487187

Reviewed by Wenson Hsieh.

The previous code got this right by using self.playing. _playing was totally un-
used, so this patch just removes it.

* platform/mac/WebPlaybackControlsManager.h:
* platform/mac/WebPlaybackControlsManager.mm:
(-[WebPlaybackControlsManager setPlaying:]):



Canonical link: https://commits.webkit.org/182943@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209264 268f45cc-cd09-0410-ab3c-d52691b4dbfc